--- a/index.html
+++ b/index.html
@@ -1,11 +1,121 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title> Habibi Pizza </title>
   </head>
   <body>
-    text area
+    <header>
+      <nav>
+        <a href="#">
+<img src="./images/logo.svg" alt="логотип Habibi Pizza ">
+        </a>
+        <ul>
+          <li><a href="#">Наші традиції</a></li>
+          <li><a href="#">Шеф-кухарі></a></li>
+          <li><a href="#">Меню</a></li>
+          <li><a href="#">Контакти</a></li>
+        </ul>
+      </nav>
+<form action="https://glovoapp.com/ua/ru/kiev-pravyy-bereg/habibi-pizza-kie/" target="_blank">
+   <button>Замовити доставку</button>
+  </form>
+    </header>
+    <main>
+      <section>
+        <h1 lang="en"> Habibi Pizza</h1>
+      </section>
+      <section>
+        <h2>Новий формат традицій</h2>
+        <p>
+          <span lang="en"> Habibi Pizza </span> — це заклад, який взялв все найкраще, і
+          зберіг смак традиційної випічки та натуральність інгредієнтів.
+        </p>
+        <p>
+          Ми працюємо як найвідоміші мережі —
+          <span>8 хвилин і замовлення готове</span>. А ще у нас швидка доставка
+          та висока якість обслуговування!
+        </p>
+        <img src="./images/hands.png" alt="руки з тістом">
+      </section>
+      <section>
+        <h2>Наші шеф - кухарі</h2>
+        <ul>
+          <li> 
+            <article>
+          <h3>Анатолій</h3>
+          <p>Привіт!</p> 
+          <p>Вже 6 років, я свтілюю у життя цікаві та смачні ідеї.</p>
+          <p>Я випічу для вас найсмачніщі вироби!</p>
+        </article>
+      </li>
+          <li>
+            <article>
+          <h3>Ренат</h3>
+          <p>Хай, я Ренат!</p>
+          <p>Мій стаж вже 10 років. Habibi Pizza - це наша любов, з якою ми ділимось кожен раз з Вами через нашу випічку!</p>
+          <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+        </article>
+          </li>
+        </ul>
+      </section>
+      <section>
+        
+        <h2>Страви</h2>
+        <ul>
+          <li>
+          <article>
+          <h3 lang="en"></h3lang>Pizza</h3>
+        </article>
+        </li>
+        <li>
+          <article>
+          <h3>Салати</h3>
+        </article>
+        </li>
+        <li>
+          <article>
+          <h3>Випічка</h3>
+        </article>
+        </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Як нас знайти</h2>
+      </section>
+    </main>
+    <footer>
+      <nav>
+      <a href="#">
+<img src="./images/logo.svg" alt="логотип Habibi Pizza ">
+      </a>
+        <ul>
+          <li><a href="#">Наші традиції</a></li>
+          <li><a href="#">Шеф-кухарі</a></li>
+          <li><a href="#">Меню</a></li>
+          <li><a href="#">Контакти</a></li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li>
+            <a href="tel:+380978796786">+ 38 (097)879 67 86
+            </a>
+          </li>
+          <li>
+            <a href="https://maps.app.goo.gl/7W6faSTXyvq2d7H48" target="blank">вулиця Кирилівська, 65, Київ, Украина, 02000
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/habibi_pizza_/?igshid=MzRlODBiNWFlZA%3D%3D" target="_blank"> instagram
+            </a>
+          </li>
+        </ul>
+        <a href="#" target="_blank">Політика конфіденційності</a>
+        <p>© 2023 Дані захищені</p>
+      </address>
+  </footer>
   </body>
 </html>
